<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_choose" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.buryware.burywarechoose.ChooseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="145dp"
            android:layout_height="150dp"
            android:layout_weight="0.3"
            android:contentDescription="@string/author_steve_stansbury"
            android:paddingTop="15dp"
            app:srcCompat="@drawable/authorme" />

        <TextView
            android:id="@+id/marque"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/large_header_text0"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textColor="@color/colorBuryware"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/marque2"
            android:layout_width="459dp"
            android:layout_height="394dp"
            android:layout_margin="@dimen/text_margin"
            android:paddingLeft="25dp"
            android:text="@string/large_header_text"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorBuryware" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
