<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_choose2" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.buryware.burywarechoose.ChooseThanksFirstUsers">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/_firstwinnerslabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/large_header_text2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorBuryware"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/_firstwinnersBodyText"
                android:layout_width="258dp"
                android:layout_height="263dp"
                android:layout_gravity="center"
                android:padding="15dp"
                android:text="@string/firstusersthankstext"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="12dp" />

            <ImageView
                android:id="@+id/otherproducts"
                android:layout_width="145dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:contentDescription="@string/thanksfirstusers_button"
                android:src="@drawable/otherproducts" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/thanksfirstusers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:contentDescription="@string/thanksfirstusers_button"
                android:src="@drawable/realesenotes" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/blkbutton"
                android:layout_width="65dp"
                android:layout_height="30dp"
                android:layout_weight="0.3"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/okaybutton"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_weight="0.3"
                android:background="@drawable/button_frame"
                android:text="@string/OK"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/blk2button"
                android:layout_width="65dp"
                android:layout_height="30dp"
                android:layout_weight="0.3"
                android:background="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/BurywareImageView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="0.9"
                android:contentDescription="@string/logo"
                android:src="@drawable/buryware" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
