<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="147dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:paddingVertical="5dp"
                app:srcCompat="@drawable/highscores" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="492dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/_100winnerslabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:capitalize="characters"
                android:text="@string/topwinners"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance"
                android:textColor="@color/colorBuryware"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/HighScoreRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="457dp"
                android:layout_weight="0.6"
                android:paddingHorizontal="60dp"
                android:paddingVertical="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/blkbutton"
                android:layout_width="65dp"
                android:layout_height="30dp"
                android:layout_weight="0.3"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/okaybutton"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_weight="0.3"
                android:background="@drawable/button_frame"
                android:text="@string/OK"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/blk2button"
                android:layout_width="65dp"
                android:layout_height="30dp"
                android:layout_weight="0.3"
                android:background="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/BurywareImageView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="0.9"
                android:contentDescription="@string/logo"
                android:src="@drawable/buryware" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>